@@ -1,10 +1,6 @@
 #!/usr/bin/perl
 use strict;
 
-## TODO: ...
-use lib qw[/home/httpd/html/www/markup/html/whatpm
-           /home/wakaba/work/manakai2/lib];
-
 use Getopt::Long;
 use File::Path qw/mkpath/;
 
@@ -15,7 +11,13 @@ my $test_dir_name = 'test';
 my $testset_id;
 my $result_list_url = q<http://suika.fam.cx/gate/test-results/list/>;
 
+require JSON;
+use Pod::Usage;
+
 GetOptions (
+  'help' => sub {
+    pod2usage (-exitval => 0, -verbose => 2);
+  },
   'idl-file-name=s' => sub {
     if ($_[1] =~ /\b([A-Za-z0-9_-]+)(?:\.[A-Za-z0-9_-]+)?$/) {
       $testset_id = $1 unless defined $testset_id;
@@ -31,15 +33,18 @@ GetOptions (
     $instances_input = '';
     $instances_input .= $_ while <$file>;
 
-    require JSON;
     $instances = JSON::jsonToObj ($instances_input);
   },
   'result-list-url=s' => \$result_list_url,
   'test-dir-name=s' => \$test_dir_name,
   'testset-id=s' => \$testset_id,
-) or die; ## TODO: ...
-die "## TODO: error message here (testset-id)" unless defined $testset_id;
-die "## TODO: error (idl-file-name)" unless defined $input;
+) or pod2usage (-exitval => 1, -verbose => 1);
+pod2usage (-exitval => 1, -verbose => 1,
+           -msg => "Required argument --testset-id is not specified.\n")
+      unless defined $testset_id;
+pod2usage (-exitval => 1, -verbose => 1,
+           -msg => "Required argument --idl-file-name is not specified.\n")
+      unless defined $input;
 
 my $testset_dir_name = $test_dir_name . '/' . $testset_id . '/';
 mkpath $testset_dir_name;
@@ -1076,3 +1081,163 @@ function wttCheckCrash (testId) {
 ] if defined $instances_input;
   }
 } # generate_support_files
+
+__END__
+
+=head1 NAME
+
+wttjs.pl - WebIDL ECMAScript Binding Test Suite Generator
+
+=head1 SYNOPSIS
+
+  $ perl wttjs.pl \
+        --idl-file-name input.idl \
+        --instances-file-name input.json \
+        --test-dir-name output-dir/ \
+        --testset-id testname
+
+  $ perl wttjs.pl --help
+
+=head1 DESCRIPTION
+
+The script C<wttjs.pl> generates a set of test cases for the
+conformance of a Web browser's DOM implementation, with regard to a
+set of interfaces described by a WebIDL fragment.
+
+For more information, see the readme document
+L<http://suika.fam.cx/www/webidl2tests/doc/readme>.
+
+=head1 ARGUMENTS
+
+This script accepts command-line arguments in the
+L<Getopt::Long|Getopt::Long> style.  Any argument can be specified at
+most once.
+
+=over 4
+
+=item C<--help>
+
+Show the help on the command-line arguments and exit the script.
+
+=item C<--idl-file-name I<file-name.idl>> (B<REQUIRED>)
+
+The name or path of the file that contains the IDL fragment that
+defines a set of interfaces and exceptions to be tested against.
+
+If this argument is not specified, if the specified file is not found,
+or if the file cannot be read due to some I/O error, the script would
+exit with an error message.
+
+The file must be encoded in UTF-8 (Perl's C<utf-8> encoding).
+Otherwise, the result test cases might be broken.
+
+The file must contain a syntactically valid IDL fragment.  Any failure
+to conform to the WebIDL syntax would be reported to the standard
+error output.  Such errors are handled by the CSS-like
+forward-compatible parsing rule as implemented by the
+L<Whatpm::WebIDL|Whatpm::WebIDL> parser.
+
+Though the content of the file don't have to be a conforming IDL
+fragment, the result test cases might be broken if it is not.  It is
+encouraged to check the conformance of the input IDL fragment by a
+conformance checker, e.g. WebHACC
+L<http://suika.fam.cx/gate/2007/html/cc/>.
+
+=item C<--instances-file-name I<file-name.json>> (Default: No instance generation)
+
+The name or path of the file that contains supplement information on
+interfaces and exceptions defined in the IDL fragment.
+
+If the specified file is not found, or if the file cannot be read due
+to some I/O error, the script would exit with an error message.
+
+The file must be encoded in UTF-8 (Perl's C<utf-8> encoding).
+Otherwise, the file might be considered as broken, or the result test
+cases might be broken.
+
+The file must contain a JSON representation of a data structure
+described in the readme document.  If the content is not valid as
+JSON, then the script would exit with an error message.  If the
+content does not encode the data structure specified in the readme
+document, the script might exit with a Perl script execution error.
+Even when no Perl error stops the script, the result test cases might
+be broken.
+
+If this argument is not specified, then it is assumed that no
+additional information is available.
+
+=item C<--test-dir-name I<path-to-dir/>> (Default: C<./tests/>)
+
+The name or path of the directory, in which the directory for the test
+files is created.
+
+The default value that is used when this argument is not specified is
+C<./tests/>.
+
+All files generated by this script is put into the directory
+C<I<test-dir-name>/I<testset-id>/>, where I<test-dir-name> is the
+value specified by the C<--test-dir-name> argument and I<testset-id>
+is the value specified by the C<--testset-id> argument.  If there is
+no such a directory, then it is created by the script.
+
+=item C<--testset-id I<id>> (B<REQUIRED>)
+
+The identifier of the test suite.
+
+If this argument is not specified, the script would exit with an error
+message.
+
+Though any value can be specified as identifier, it should be a string
+consist of characters C<a>..C<z>, C<0>..C<9>, and C<-> only, with no
+leading C<-> character, for filesystem safety and compatibility with
+the test result summary script (see the readme document).
+
+=back
+
+=head1 DEPENDENCY
+
+This script, in addition to Perl 5.8.* or later, requires the
+following modules:
+
+=over 4
+
+=item L<JSON|JSON>
+
+A JSON parser and serializer, which is available from CPAN.
+
+To install the L<JSON|JSON> module from the CPAN, type:
+
+  # perl -MCPAN -eshell
+  cpan> install JSON
+
+=item L<Whatpm::WebIDL|Whatpm::WebIDL>
+
+A WebIDL parser and object model implementation, which is part of the
+Whatpm package L<http://suika.fam.cx/www/markup/html/whatpm/readme>.
+
+=back
+
+=head1 SEE ALSO
+
+Readme L<http://suika.fam.cx/www/webidl2tests/readme>.
+
+Web IDL specification, revision 1.96 (3 September 2008 Editor's Draft)
+L<http://dev.w3.org/cvsweb/~checkout~/2006/webapi/WebIDL/Overview.html?rev=1.96&content-type=text/html;%20charset=utf-8>.
+
+L<Whatpm::WebIDL|Whatpm::WebIDL>, which is used to parse IDL
+fragments.
+
+=head1 AUTHOR
+
+Wakaba <w@suika.fam.cx>
+
+=head1 LICENSE
+
+Copyright 2008 Wakaba <w@suika.fam.cx>
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=cut 
+
+## $Date: 2008/10/11 05:37:30 $
